# xxaa

./: .gitignore  README.md  pyproject.toml
tests/logs/: generate_profile.py
xxaa/: cli.py  constants.py  torch_profile_log.py  utils.py
